package com.example.myprojekakhir.Interface;

public interface ChangeNumberItemsListener {
    void changed();
}
